tests/files/lexer_tests/should_fail/006.cmdr
// Illegal character in string (ascii 6)
var = ''